Interfaz con String bilingue

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">EmpresaXYZ</string>
+    <string name="DetalleProducto">Detalle del Producto</string>
+    <string name="Material">Material</string>
+    <string name="Dije">Dije</string>
+    <string name="Tipo">Tipo</string>
+    <string name="TipoMoneda">Tipo de Moneda</string>
+    <string name="Valor">Valor</string>
 </resources>
