Combo con datos asociados

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,4 +7,5 @@
     <string name="Tipo">Type</string>
     <string name="TipoMoneda">Type of Currency</string>
     <string name="Valor">Value</string>
+    <string name="Cantidad">" Quantity"</string>
 </resources>
