Terminada con los string completos

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -8,4 +8,28 @@
     <string name="TipoMoneda">Type of Currency</string>
     <string name="Valor">Value</string>
     <string name="Cantidad">" Quantity"</string>
+    <string name="dolar">Dollar</string>
+    <string name="pesos">Pesos</string>
+    <string name="TipoManilla">Handle Type</string>
+    <string name="opcionmanillauno">Golden Hammer</string>
+    <string name="opcionmanillados">Silver Hammer</string>
+    <string name="opcionmanillatres">Nickel Plated Hammer</string>
+    <string name="opcionmanillacuatro">Golden Anchor</string>
+    <string name="opcionmanillacinco">Silver Anchor</string>
+    <string name="opcionmanillaseis">Nickel Plated Anchor</string>
+    <string name="opcionmanillasiete">Golden Hammer on Rope</string>
+    <string name="opcionmanillaocho">Silver Hammer on Rope</string>
+    <string name="opcionmanillanueve">Nickel Plated Hammer on Rope</string>
+    <string name="opcionmanilladiez">Golden Anchor on Rope</string>
+    <string name="opcionmanillaonce">Silver Anchor on Rope</string>
+    <string name="opcionmanilladoce">Nickel Plated Anchor on Rope</string>
+    <string name="cuero">Leather</string>
+    <string name="cuerda">Rope</string>
+    <string name="martillo">Hammer</string>
+    <string name="ancla">Anchor</string>
+    <string name="oro">Gold</string>
+    <string name="plata">Silver</string>
+    <string name="niquel">Nickel</string>
+    <string name="limpiar">Clean</string>
+    <string name="error_cantidad">Type the Quantity</string>
 </resources>
